# ToppleChess

./: .gitignore  CMakeLists.txt  README.md  bb.cpp  bb.h  board.cpp  board.h  endgame.cpp  endgame.h  eval.cpp  eval.h  hash.cpp  hash.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  movesort.cpp  movesort.h  pawns.cpp  pawns.h  pvs.cpp  pvs.h  search.cpp  search.h  smp.cpp  smp.h  test.sh  types.h
.github/workflows/: cmake.yml
syzygy/: fathom.cpp  fathom.h  tbconfig.cpp  tbconfig.h  tbcore.cpp  tbcore.h  tbprobe.cpp  tbprobe.h  tbresolve.cpp  tbresolve.h
testing/: catch.hpp  runner.cpp  test_bb.cpp  test_board.cpp  test_hash.cpp  test_perft.cpp  test_see.cpp  util.cpp  util.h
testing/tests/: test_bb.cpp  test_board.cpp  test_hash.cpp  test_perft.cpp  test_see.cpp
texeltuning/: main.cpp  texel.cpp  texel.h
tools/: pgn.cpp  pgn.h
toppletuning/: game.cpp  game.h  main.cpp  toppletuner.cpp  toppletuner.h
tuning/: tunemain.cpp  tuner.cpp  tuner.h
